Revision history for Reindeer

{{$NEXT}}

0.020     2017-12-20 17:29:08 CST-0600
	* Use Reindeer in Reindeer documentation (@2shortplanks,
	  pull request #11)
	* Fix documentation of what feature bundles are enabled (issue #13)

0.019     2017-06-09 22:31:28 CDT-0500
	* Minor tweak for 5.26

0.018     2015-03-28 21:11:48 PDT-0700
	* Add MooseX::CascadeClearing as an optional trait
	* Add Shortcuts trait alias
	* Use an appropriate feature bundle, vs :5.10 everywhere

0.017     2014-03-03 00:52:19 PST-0800
	* handle Try::Tiny and Exporter's breakup (gh #6; thanks @amiri and
	  @ether)!

0.016     2012-09-17 19:07:37 America/Los_Angeles
	* drop the ~~ operator from Builder.

0.015     2012-09-06 09:03:22 America/Los_Angeles
	* doc that v5.10 features are enabled if available

0.014     2012-08-31 00:57:56 America/Los_Angeles
	* enable v5.10 features (say, switch, state) if we're on v5.10 or greater

0.013     2012-08-27 00:03:08 America/Los_Angeles
	* bump MX::AS dep to 0.015

0.012     2012-06-12 16:50:57 America/North_Dakota/New_Salem
	* add class_type() and role_type() from Moose::Util::TypeConstraints

0.011     2012-04-26 23:26:57 America/Los_Angeles
	* add ENV as an optional attribute trait

0.010     2012-04-25 10:34:11 America/Los_Angeles
	* bump IxHash req to 0.003; this is the first version that omits coercion from
	  hashrefs.

0.009     2012-04-07 23:30:51 America/Los_Angeles
	* TRIAL release
	* add: MooseX::Traits

0.008     2012-02-28 14:31:07 America/Los_Angeles
	* pod/documentation update only

0.007     2012-02-14 20:47:12 America/Los_Angeles
	* add: MooseX::CurriedDelegation
	* add: MooseX::Types::LoadableClass
	* initial combined types library (Reindeer::Types)
	* Reinder::Util can now export functions on request

0.006     2012-02-06 07:42:58 America/Los_Angeles
	* Add explicit version dependencies to most deps.  This should help avoid some
	  install/test failures

0.005     2012-02-05 09:51:30 America/Los_Angeles